Scripts/Nginx Ingress/2048/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: 2048-game
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
